<resources>
    <string name="app_name">失物招領系統</string>
    <string name="action_Index">首頁</string>
    <string name="action_settings">設定</string>
    <string name="action_reset">清除頁面資料</string>
    <string name="action_about">關於我們</string>
    <string name="action_Out">登出</string>
    <string name="action_quit">離開APP</string>

    <!-- Strings related to InoutData -->
    <string name="WhoLose">失主</string>
    <string name="WhatLose">遺失物</string>
    <string name="WhereLose">在哪裡遺失</string>
    <string name="WhenLose">遺失時間(mm/DD/YYYY)</string>
    <string name="WhoPicked">拾獲人</string>
    <string name="WhatPicked">拾獲物</string>
    <string name="WherePicked">拾獲地點</string>
    <string name="WhenPicked">拾獲時間(mm/DD/YYYY)</string>
    <string name="Connection">連絡電話</string>
    <string name="Search">搜尋</string>
    <string name="Input">輸入</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="title_activity_picked_thing_datainput">Sign in</string>
</resources>
