<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication.LostThingDatainputActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/WhatPicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/WhatPicked"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/Input"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="28dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/WherePicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/WherePicked"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/Input"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="28dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                android:id="@+id/WhenPicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/WhenPicked"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/Input"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="28dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="日期"
                android:id="@+id/DateSelect"
                android:layout_gravity="right"
                android:textSize="20dp"
                android:background="#61db68" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Connection"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/Input"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="28dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/PickedThingDataSubmit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="送出資料"
                android:textSize="32dp"
                android:background="#61db68" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
